---
source: reflect-demo/src/main.rs
expression: "TestStructWithNested::reflect_input()"
---
{
  "name": "",
  "types": [
    {
      "name": "reflect_demo::test::TestStructNested",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "String"
          }
        }
      ]
    },
    {
      "name": "reflect_demo::test::TestStructWithNested",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "reflect_demo::test::TestStructNested"
          }
        }
      ]
    }
  ]
}
